# RustApps

connectors_sdk/: Cargo.toml
console_game/: Cargo.toml
console_game/src/: main.rs
file_system_connector/: Cargo.toml  config.json
file_system_connector/src/: common.rs  document_processing.rs  indexing_api.rs  lib.rs  main.rs  settings.rs  traverse.rs
tasks/src/: main.rs
test-react-app/: package-lock.json  package.json
test-react-app/src-tauri/: tauri.conf.json
