[package]
name = "file_system_connector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
config = { version = "0.11", features = ["json"] }
log = { version = "0.4", features = ["std"] }
log4rs = { version = "1", features = ["console_appender", "pattern_encoder"] }
futures = { version = "0.3" }